# Fake-osu

./: Fake osu!.py  LICENSE  MapPlayer.py  ModEffects.py  README.md  ResultScreen.py  Text.py  Utilities.py  requirements.txt  setup.cfg
Gameplay/: Circle.py  End.py  Spinner.py
maps/Beta/maps/Object type test/: local_leaderboard.json  map.json
maps/Empty/: Info.json
maps/Empty/maps/Empty/: local_leaderboard.json  map.json
maps/Example/: Info.json
maps/Example/Normal/: map.json
maps/Example/maps/Hard/: local_leaderboard.json  map.json
maps/Example/maps/Insane/: map.json
maps/Example/maps/Normal/: local_leaderboard.json  map.json
maps/alpha/Circle test/: map.json
maps/alpha/Slider test/: map.json
maps/alpha/Spinner Test/: map.json
maps/alpha/maps/Circle test/: local_leaderboard.json  map.json
maps/alpha/maps/Slider test/: local_leaderboard.json  map.json
maps/alpha/maps/Spinner Test/: local_leaderboard.json  map.json
maps/beta/Object type test/: map.json
maps/empty/Empty/: map.json
src/: Button.py  Fake osu!.py  MapPlayer.py  Menu.py  ModSelect.py  ResultScreen.py  test.py
src/Fake_osu_by_pacowoc.egg-info/: PKG-INFO  SOURCES.txt
src/Gameplay/: Circle.py  Slider.py  Spinner.py
