[metadata]
name = Fake-osu-by-pacowoc
version = 0.1.5
author = pacowoc
author_email = pacowoc@gmail.com
description = Fake osu!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pacowoc/Fake-osu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src